# conode

./: .gitignore  Dockerfile  Justfile  README.md  config.toml  docker-compose.base.yaml  docker-compose.dev.yaml  example.config.toml  pyproject.toml  test.config.toml
deploy/keycloak/: realm-conode.json
docs/: handshake.md  role
scripts/: certs.sh
src/conode/application/: errors.py
src/conode/bootstrap/: cli.py
src/conode/infrastructure/: config.py  identity_provider.py  password_hasher.py  token_manager.py  transaction_manager.py
src/conode/presentation/: common.py  root.py
src/prodik/application/: errors.py
tests/: conftest.py  factories.py  services.py
tests/auth/: test_login.py  test_refresh.py  test_register.py
tests/company/: test_register_company.py  test_verify_company.py
tests/context/: test_create_context.py  test_delete_context.py  test_get_contexts_by_current_company.py
tests/edge/: test_create_edge.py  test_decrement_edge.py  test_decrement_edge_weight.py  test_delete_edge.py  test_get_edges_by_context.py  test_get_shortest_path.py  test_increment_edge.py  test_increment_edge_weight.py  test_manage_edge.py  test_update_edge_weight.py
tests/factories/: __init__.py  common.py
tests/group/: test_manage_group.py
tests/node/: test_attach_node.py  test_create_node.py  test_delete_node.py  test_detach_node.py  test_get_neighbours.py  test_manage_association.py  test_update_node.py
tests/offer/: test_accept_offer_from_company.py  test_decline_offer_from_company.py  test_send_offer_to_company.py
tests/role/: test_create_role.py  test_delete_role.py  test_update_role.py
tests/root/: test_ping.py
tests/user/: test_get_current_user.py  test_get_user_by_username.py  test_give_role_to_user.py  test_revoke_role_from_user.py  test_update_current_user_password.py
(+368 files in other folders)
